Ajout vector + supression ligne vector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(SVG_CREATOR)
 
 set(CMAKE_CXX_STANDARD 98)
 
-add_executable(SVG_CREATOR src/main.cpp src/Point.cpp headers/Point.h src/Circle.cpp headers/Circle.h src/Rect.cpp headers/Rect.h src/Triangle.cpp headers/Triangle.h headers/Shape.h src/SvgCreator.cpp headers/SvgCreator.h)
+add_executable(SVG_CREATOR src/main.cpp src/Point.cpp headers/Point.h src/Circle.cpp headers/Circle.h src/Rect.cpp headers/Rect.h src/Triangle.cpp headers/Triangle.h headers/Shape.h src/SvgCreator.cpp headers/SvgCreator.h src/SvgReader.cpp headers/SvgReader.h)
